Fix misalignment of links in bulletpoints when content wraps over two lines

--- a/app/webpacker/styles/text.scss
+++ b/app/webpacker/styles/text.scss
@@ -16,16 +16,15 @@ dt,
 }
 
 li {
-  margin-bottom: 0.5em; 
+  margin-bottom: 0.5em;
 
   &:last-child {
     margin-bottom: 0;
   }
 
   a {
-    display: inline-block; 
-    min-width: 24px; 
-    min-height: 24px; 
+    min-width: 24px;
+    min-height: 24px;
   }
 }
 
